@@ -3,6 +3,12 @@
 **************************
 Version 0.3.1 [2006-xxx-xx] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Modified GD canvas addText() method with TTF fonts - (x, y) parameters now specify the absolute lower-left corner of the text (if angle is 0) instead of the baseline of the first letter, making texts appear incorrectly. This however require fonts to have a steady baseline, like fx. Arial, Verdana, etc. unlike Comic
+    * Fixed Image_Canvas_PDF to display correctly
+    * Fixed Request #7285 "UTF-8 in SVGs"
+    * Fixed Bug #7454 "Vertical axis title is shifted 180 degrees between SVG and PNG output"
+    * Fixed Bug #8488 "wrong variable name" (thanks to troehr at php dot net)
+    * Fixed Bug #8556 "SVG.php contains typo" (thanks to troehr at php dot net)
+    * Fixed Bug #9070 "factory method causes PHP error if no GD" (thanks to troehr at php dot net)
 
 Version 0.3.0 [2006-Mar-02] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Added clipping (GD uses Image_Canvas method involving ImageCopy(), until native support is available throught existing GD functions gdImageSetClip())
